# tg_agda_detector

./: .env  Cargo.toml  README.md
.github/workflows/: deploy.yml
.sqlx/: query-13c034dfe3d81634781e88cd7345ca29f5fb0ba9e5d77673319733dd72f46f33.json  query-80c65441952afec0e3d869df5c0a50c2a64fae6d9c28ba3e2b114ae9f51aafe0.json  query-a8d65905f1de60729dfbf59519f91f65bd17ac7e80c188a0af51c42c02c1ff23.json  query-ae28e053117792fc64efb4dbe0d74f36c606a4700e7ad6f684ca28cd2f1814cd.json  query-e41c2494a4a5239e93d797c493840b7eb545cac7ffc11b0be2b9b30b629f8332.json  query-f52e9dcbcac1a6b003790496d426ff111f422e6a273e3a41a30d45f0a4395377.json  query-f83ad35ac1a642f6eb7a7b30fa90b988e84cf66e656b5694818b6139959d842e.json
migrations/: 20240916220418_init.sql
src/: axum_listener.rs  handler.rs  main.rs
