[package]
name = "tg-agda-detector"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
color-eyre = "0.6"
dotenvy = "0.15"
eyre = "0.6"
futures = "0.3"
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio-rustls", "migrate", "macros", "postgres"] }
teloxide = { version = "0.13", default-features = false, features = ["ctrlc_handler", "cache-me", "rustls", "macros", "webhooks-axum"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio = { version = "1.40", features = ["rt", "rt-multi-thread", "macros"] }
itertools = "0.13"